force-app/main/default/objects/ZipCode__c/ZipCode__c.object-meta.xml
<CustomObject>
    <description>It contains all zip codes for the corresponding branches.</description>
    <label>Zip Code</label>
    <nameField>
        <label>Zip Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>