force-app/main/default/objects/ZipCode__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Zip Codes</relationshipLabel>
    <relationshipName>Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>