force-app/main/default/objects/ZipCode__c/listViews/AZ.listView-meta.xml
<ListView>
    <fullName>AZ</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>ZipCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <label>AZ</label>
</ListView>