force-app/main/default/objects/ZipCode__c/listViews/Boston_Branch.listView-meta.xml
<ListView>
    <fullName>Boston_Branch</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>MSA__c</columns>
    <columns>Region_Code__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>contains</operation>
        <value>Boston</value>
    </filters>
    <label>Boston Branch</label>
</ListView>