force-app/main/default/objects/ZipCode__c/listViews/Branch.listView-meta.xml
<ListView>
    <fullName>Branch</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>MSA__c</columns>
    <columns>Region_Code__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>Branch</label>
</ListView>