force-app/main/default/objects/ZipCode__c/listViews/TX.listView-meta.xml
<ListView>
    <fullName>TX</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>MSA__c</columns>
    <columns>Region_Code__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>TX</value>
    </filters>
    <label>TX</label>
</ListView>